--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
         <div id="mainDiv">Hello Div</div>
         <br />
         <button onclick="buttonClicked()">Click me</button>
+        <img src="construction.jpg">
     </body>
 </html>
