--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
         <br />
         <button onclick="buttonClicked()">Click me</button>
         <br />
-        <img src="construction.jpg">
+        <img src="https://raw.githubusercontent.com/mschimkus/michaelsc/refs/heads/main/construction.jpg">
     </body>
 </html>
