--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="background-color:black;">
     <head>
         <meta charset="UTF-8" />
         <title>Title</title>
         <link rel="stylesheet" href="styles.css" />
         <script src="script.js"></script>
+        <style>
+            h1 {text-align: center}
+        </style>
     </head>
     <body>
-        <h1 class="title">Hello World</h1>
-        <div id="mainDiv">Hello Div</div>
-        <br />
-        <button onclick="buttonClicked()">Click me</button>
-        <br />
-        <img src="https://raw.githubusercontent.com/mschimkus/michaelsc/refs/heads/main/construction.jpg">
+    <h1 style="color:white">
+        Welcome to my webpage
+    </h1>
     </body>
 </html>
