--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         </style>
     </head>
     <body>
-    <h1 style="color:white">
+    <h1 style="color:white;">
         Welcome to my webpage
     </h1>
     </body>
