--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
   <nav>
     <a href="#">Home</a>
-    <a href="#">About</a>
+    <a href="about.html">About</a>
     <a href="#">Services</a>
     <a href="#">Contact</a>
   </nav>
