--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
 
   <div class="container">
     <div class="card">
-      <h2>Welcome</h2>
+      <h2>About</h2>
       <p>This is a simple responsive website template that adjusts to your screen size.</p>
     </div>
     <div class="card">
