--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
     header h1 {
       text-align: center;
+      color: #66b2ff; /* light blue */
     }
 
     nav {
@@ -59,7 +60,7 @@
     }
 
     section {
-      padding: 2rem 1rem;
+      padding: 1rem 1rem;
       margin: 0 auto;
       max-width: 1200px;
     }
@@ -69,7 +70,7 @@
       padding: 2rem;
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0,0,0,0.05);
-      margin-bottom: 2rem;
+      margin-bottom: 1rem;
       opacity: 0;
       transform: translateY(40px);
       transition: opacity 0.8s ease-out, transform 0.8s ease-out;
@@ -80,10 +81,10 @@
       transform: translateY(0);
     }
 
-    /* Portfolio Gallery */
+    /* Stack portfolio cards vertically */
     .gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      display: flex;
+      flex-direction: column;
       gap: 1rem;
       margin-top: 1rem;
     }
@@ -97,6 +98,9 @@
       transform: scale(0.95);
       transition: opacity 0.8s ease, transform 0.8s ease;
       cursor: pointer;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
 
     .gallery-item.show {
@@ -106,9 +110,11 @@
 
     .gallery-item img {
       width: 100%;
+      max-width: 800px;
       height: 180px;
       object-fit: cover;
       display: block;
+      border-radius: 8px 8px 0 0;
     }
 
     .gallery-item h3 {
@@ -117,11 +123,13 @@
       text-align: center;
       background: #0096c7;
       color: #fff;
+      width: 100%;
+      border-radius: 0 0 8px 8px;
     }
 
     footer {
       background: #006d77;
-      color: #fff;
+      color: #66b2ff; /* light blue */
       text-align: center;
       padding: 1rem;
       margin-top: 2rem;
@@ -196,13 +204,24 @@
       align-items: center;
       flex-direction: column;
       z-index: 2000;
+      padding: 20px;
+      box-sizing: border-box;
     }
 
     #lightbox img {
       max-width: 80%;
-      max-height: 70%;
+      max-height: 60%;
       margin-bottom: 10px;
       border-radius: 5px;
+      box-shadow: 0 0 20px rgba(255,255,255,0.2);
+    }
+
+    #lightbox-caption {
+      color: #fff;
+      font-size: 1.2rem;
+      margin-bottom: 15px;
+      text-align: center;
+      max-width: 80%;
     }
 
     .lightbox-controls {
@@ -249,10 +268,10 @@
       <h2>Portfolio</h2>
       <p>Check out some of my projects below:</p>
       <div class="gallery">
-        <div class="gallery-item"><img src="https://via.placeholder.com/800x500" alt="Project 1"><h3>Project 1</h3></div>
-        <div class="gallery-item"><img src="https://via.placeholder.com/800x500" alt="Project 2"><h3>Project 2</h3></div>
-        <div class="gallery-item"><img src="https://via.placeholder.com/800x500" alt="Project 3"><h3>Project 3</h3></div>
-        <div class="gallery-item"><img src="https://via.placeholder.com/800x500" alt="Project 4"><h3>Project 4</h3></div>
+        <div class="gallery-item" data-title="Project 1"><img src="https://via.placeholder.com/800x500" alt="Project 1"><h3>Project 1</h3></div>
+        <div class="gallery-item" data-title="Project 2"><img src="https://via.placeholder.com/800x500" alt="Project 2"><h3>Project 2</h3></div>
+        <div class="gallery-item" data-title="Project 3"><img src="https://via.placeholder.com/800x500" alt="Project 3"><h3>Project 3</h3></div>
+        <div class="gallery-item" data-title="Project 4"><img src="https://via.placeholder.com/800x500" alt="Project 4"><h3>Project 4</h3></div>
       </div>
     </div>
   </section>
@@ -278,6 +297,7 @@
   <!-- Lightbox -->
   <div id="lightbox">
     <img src="" alt="Lightbox Image" />
+    <div id="lightbox-caption"></div>
     <div class="lightbox-controls">
       <button class="lightbox-btn" id="prevBtn">Prev</button>
       <button class="lightbox-btn" id="nextBtn">Next</button>
@@ -325,20 +345,24 @@
     window.addEventListener("scroll", revealOnScroll);
     window.addEventListener("load", revealOnScroll);
 
-    // Lightbox feature
+    // Lightbox feature with captions
     const lightbox = document.getElementById("lightbox");
     const lightboxImg = lightbox.querySelector("img");
-    const galleryItems = document.querySelectorAll(".gallery-item img");
+    const lightboxCaption = document.getElementById("lightbox-caption");
+    const galleryItems = document.querySelectorAll(".gallery-item");
     let currentIndex = 0;
 
     const openLightbox = (index) => {
       currentIndex = index;
-      lightboxImg.src = galleryItems[index].src;
+      const item = galleryItems[index];
+      lightboxImg.src = item.querySelector("img").src;
+      lightboxImg.alt = item.querySelector("img").alt;
+      lightboxCaption.textContent = item.getAttribute("data-title") || "";
       lightbox.style.display = "flex";
     };
 
-    galleryItems.forEach((img, index) => {
-      img.addEventListener("click", () => openLightbox(index));
+    galleryItems.forEach((item, index) => {
+      item.addEventListener("click", () => openLightbox(index));
     });
 
     document.getElementById("closeBtn").addEventListener("click", () => {
@@ -347,12 +371,12 @@
 
     document.getElementById("prevBtn").addEventListener("click", () => {
       currentIndex = (currentIndex - 1 + galleryItems.length) % galleryItems.length;
-      lightboxImg.src = galleryItems[currentIndex].src;
+      openLightbox(currentIndex);
     });
 
     document.getElementById("nextBtn").addEventListener("click", () => {
       currentIndex = (currentIndex + 1) % galleryItems.length;
-      lightboxImg.src = galleryItems[currentIndex].src;
+      openLightbox(currentIndex);
     });
 
     // Close lightbox on background click
