--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     }
 
     header {
-      background: #006d77;
-      color: #fff;
+      background: #b3d9ff; /* light blue background */
+      color: #fff; /* white text */
       padding: 1rem;
     }
 
     header h1 {
       text-align: center;
-      color: #66b2ff; /* light blue */
+      color: #fff; /* white text */
     }
 
     nav {
@@ -70,7 +70,7 @@
       padding: 2rem;
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0,0,0,0.05);
-      margin-bottom: 1rem;
+      margin-bottom: 0.5rem; /* reduced spacing */
       opacity: 0;
       transform: translateY(40px);
       transition: opacity 0.8s ease-out, transform 0.8s ease-out;
@@ -128,8 +128,8 @@
     }
 
     footer {
-      background: #006d77;
-      color: #66b2ff; /* light blue */
+      background: #b3d9ff; /* light blue background */
+      color: #fff; /* white text */
       text-align: center;
       padding: 1rem;
       margin-top: 2rem;
