--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
     nav a::after {
       content: "";
       position: absolute;
-      left: 50%;
+      left: 0;
       bottom: 5px;
       width: 100%;
       height: 3px;
       background: #fff;
       transform: scaleX(0);
-      transform-origin: center;
+      transform-origin: left;
       transition: transform 0.3s ease;
     }
 
     nav a:hover::after,
     nav a.active::after {
-      transform: scaleX(1); /* expands underline from center */
+      transform: scaleX(1);
     }
 
     section {
